tests/errors/semantic/blocking/SORT_LIST_OPTIONAL_PARAM.py
# pylint: disable=missing-function-docstring, missing-module-docstring


a = [1, 2]
a.sort(reverse=True, key=len(a))

